data/derived/fa15/progs/unify/prog3684.ml.out
Characters 97-121:
  else recCounter((sumList(digitsOfInt n)) (count+1))
                  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
